--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titel</title>
+    <link rel="stylesheet" href="src/style.css">
   </head>
   <body>
     <h1>HELOOOOOOOOOOOOOOu</h1>
 
+
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
