added more structure and examples

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titel</title>
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="dist/style.css">
   </head>
   <body>
     <h1>HELOOOOOOOOOOOOOOu</h1>
 
+    <h2> UND SO GEHTS WEITER</h2>
+
+    <main>
+        <div class="ne-klasse-nach-main"> ich bin nach main.
+            <div class="noch-eine">Und ich bin noch weiter.</div>
+        </div>
+    </main>
 
     <script type="text/javascript" src="main.js"></script>
   </body>
