--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <h2> UND SO GEHTS WEITER</h2>
 
     <main>
-        <div class="ne-klasse-nach-main"> ich bin nach main.
-            <div class="noch-eine">Und ich bin noch weiter.</div>
+        <div class = "ne-klasse-nach-main"> ich bin nach main.
+            <div class = "noch-eine">Und ich bin noch weiter.</div>
         </div>
     </main>
 
+    <canvas id = "myCanvas" width = "600" height = "200"></canvas>
+
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
