--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
         </div>
     </main>
 
-    <canvas id = "myCanvas" width = "600" height = "200"></canvas>
 
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="dist/js/main.js"></script>
   </body>
 </html>
