--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
     </main>
 
+    <canvas id = "myCanvas" width = "600" height = "250"></canvas>
 
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script type="text/javascript" src="dist/js/main.js"></script>
