gallery has basic functionality

--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titel</title>
-    <link rel="stylesheet" href="dist/css/style.css">
-  </head>
-  <body>
-    <h1>HELOOOOOOOOOOOOOOu</h1>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Titel</title>
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link rel="stylesheet" href="dist/css/style.css">
+	</head>
+	<body>
+		<h1>Gallery</h1>
 
-    <h2> UND SO GEHTS WEITER</h2>
-
-    <main>
-        <div class = "ne-klasse-nach-main"> ich bin nach main.
-            <div class = "noch-eine">Und ich bin noch weiter.</div>
-        </div>
-    </main>
-
-    <canvas id = "myCanvas" width = "600" height = "250"></canvas>
-
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script type="text/javascript" src="dist/js/main.js"></script>
-  </body>
+		<div class = "gallery--container">
+		<canvas id = "myCanvas" width = "800" height = "600"></canvas>
+			<div id = "gallery--thumbs-container">
+				<img class = "gallery--img" src="src/img/unsplash1.jpg"></img>
+				<img class = "gallery--img" src="src/img/unsplash2.jpg"></img>	
+				<img class = "gallery--img" src="src/img/unsplash3.jpg"></img>
+			</div>
+		</div>
+		<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+		<script type="text/javascript" src="dist/js/main.js"></script>
+	</body>
 </html>
