deleted files in dist, moved img-location

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<div class = "gallery--container">
 		<canvas id = "myCanvas" width = "800" height = "600"></canvas>
 			<div id = "gallery--thumbs-container">
-				<img class = "gallery--img" src="src/img/unsplash1.jpg"></img>
-				<img class = "gallery--img" src="src/img/unsplash2.jpg"></img>	
-				<img class = "gallery--img" src="src/img/unsplash3.jpg"></img>
+				<img class = "gallery--img" src="img/unsplash2.jpg"></img>	
+				<img class = "gallery--img" src="img/unsplash3.jpg"></img>
+				<img class = "gallery--img" src="img/unsplash1.jpg"></img>
 			</div>
 		</div>
 		<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
