added basic support for variable img-ratios

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 	<body>
 		<h1>Gallery</h1>
 
-		<div class = "gallery--container">
-		<canvas id = "myCanvas" width = "800" height = "600"></canvas>
-			<div id = "gallery--thumbs-container">
-				<img class = "gallery--img" src="img/unsplash2.jpg"></img>	
-				<img class = "gallery--img" src="img/unsplash3.jpg"></img>
-				<img class = "gallery--img" src="img/unsplash1.jpg"></img>
+		<div class = "gal--container">
+			<div class = "gal--canvas-container">
+				<canvas id = "gal--myCanvas" width = "800" height = "600"></canvas>
+			</div>
+			<div id = "gal--thumbs-container">
+				<img class = "gal--img" src="img/unsplash1.jpg"></img>
+				<img class = "gal--img" src="img/unsplash2.jpg"></img>	
+				<img class = "gal--img" src="img/unsplash3.jpg"></img>
 			</div>
 		</div>
 		<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
