--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="dist/css/style.css">
 	</head>
 	<body>
-		<h1>Gallery</h1>
+		<h1> Canvas Gallery</h1>
 
 		<div class = "gal--container">
 			<div class = "gal--canvas-container">
@@ -20,7 +20,6 @@
 				<img class = "gal--img" src="img/unsplash3.jpg"></img>
 			</div>
 		</div>
-		<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 		<script type="text/javascript" src="dist/js/main.js"></script>
 	</body>
 </html>
